# free2pee-leptos

./: Cargo.toml  README.md  free2pee-leptos-4741259f41712e0f.js
docs/: free2pee-leptos-5ac39902480e470e.js  free2pee-leptos-5ac39902480e470e_bg.wasm  index.html
src/: lib.rs  main.rs
temp/: Cargo.toml  index.html
