[package]
name = "free2pee-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.64"
leptos = { version = "0.4.6", features = ["csr", "nightly"] }
log = "0.4.19"
reqwasm = "0.5.0"
serde = "1.0.175"
serde_derive = "1.0.175"
serde_json = "1.0.103"
thiserror = "1.0.44"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Geolocation", "console", "Window", "WindowClient", "Navigator", "NavigatorAutomationInformation", "Position", "PositionAlignSetting", "PositionError", "PositionOptions", "Coordinates"] }
